--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 															<br><br>
                                                             <b>This Website is under development but the Website is now up and running!</b>
                                                             <br><br>
-															<b>The Website may be online in February 02, 2023</b>
+															<b>The Website may be online in February 10th, 2023</b>
 															<br><br>
 															<b>The new domain will be ComeOnLinux.ga, but for now you will land here!</b>
 															<br><br>
@@ -36,7 +36,7 @@
 															<b>A:</b><b>First the Website was Buggy and not complete!</b>
 															<br><br>
 															<b>Q:</b> When does your new Website go online?<br>
-															<b>A:</b><b> I doen't now 100% for now but the date is set for February 02, 2023, But not 100% if it is going online then!</b>
+															<b>A:</b><b> I doen't now 100% for now but the date is set for February 10th, 2023, But not 100% if it is going online then! because of the bad code that 2 Paged need to be rewriten!</b>
 															<br><br>
 															<b>Q:</b> Are you planning on to make this Website Open Beta?<br>
 															<b>A:</b><b> No! I want to first complete the Website!</b>
