--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 															<b>A:</b><b>First the Website was Buggy and not complete!</b>
 															<br><br>
 															<b>Q:</b> When does your new Website go online?<br>
-															<b>A:</b><b> I doen't now 100% for now but the date is set for February 10th, 2023, But not 100% if it is going online then! because of the bad code that 2 Paged need to be rewriten!</b>
+															<b>A:</b><b> I doen't now 100% for now but the date is set for February 10th, 2023, But not 100% if it is going online then! because of the bad code that 2 Pages need to be rewriten!</b>
 															<br><br>
 															<b>Q:</b> Are you planning on to make this Website Open Beta?<br>
 															<b>A:</b><b> No! I want to first complete the Website!</b>
