--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>New Website</title>
+		<title>Under Maintenance</title>
 
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>      
@@ -21,26 +21,18 @@
 			
 					<div class="friendly-desc">
 						<p class="web-repo">
-							<b>Welcome to the new Website</b>.<br><br>
+							<b>This Website is under maintenance/b>.<br><br>
 						</p>
 						<p class="web-desc">
-                                                            <b></b>Welcome, This is the new Website (Not Really)</b>
+                                                            <b></b>Why is the Website Shutdown?</b>
 															<br><br>
-                                                            <b>This Website is under development but the Website is now up and running!</b>
+                                                            <b></b>
                                                             <br><br>
-															<b>The Website may be online in February 10th, 2023</b>
+															<b>The Website is under Maintenance</b>
 															<br><br>
-															<b>The new domain will be ComeOnLinux.ga, but for now you will land here!</b>
+															<b>Normally i would release it on February 10th, 2023 but the index.html and About.html has bad code so that it need to be rewriten! and the website is going for unlimeted Maintenance</b>
 															<br><br>
-															<b>Q:</b> Why are you shutting down the old Website?<br>
-															<b>A:</b><b>First the Website was Buggy and not complete!</b>
-															<br><br>
-															<b>Q:</b> When does your new Website go online?<br>
-															<b>A:</b><b> I doen't now 100% for now but the date is set for February 10th, 2023, But not 100% if it is going online then! because of the bad code that 2 Pages need to be rewriten!</b>
-															<br><br>
-															<b>Q:</b> Are you planning on to make this Website Open Beta?<br>
-															<b>A:</b><b> No! I want to first complete the Website!</b>
-															<br><br>
+															<b></b>Sorry for this Information, But the Website will go online Sometime in the Future!<br>
                                                             Sincerely, <a href="https://youtube.com/@ComeOnLinux">ComeOnLinux 
 
 																
