--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 															<br><br>
                                                             <b></b>
                                                             <br><br>
-															<b>The Website is under Maintenance</b>
+															The Website is under Maintenance
 															<br><br>
 															<b>Normally i would release it on February 10th, 2023 but the index.html and About.html has bad code so that it need to be rewriten! and the website is going for unlimeted Maintenance</b>
 															<br><br>
